# Termijob

./: .gitignore  .notes  README.md  main.py  pyproject.toml
termijob/: __init__.py  app.py  llm.py  models.py  repository.py
tests/: __init__.py  conftest.py  test_llm.py  test_models.py  test_repository.py
